--- a/first.html
+++ b/first.html
@@ -93,7 +93,7 @@
        <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
       <script>
       if ('serviceWorker' in navigator) {
-    navigator.serviceWorker.register('serviceworker.js', {scope: 'proghapi'}).then(function(registration) {
+    navigator.serviceWorker.register('serviceworker.js').then(function(registration) {
 
     console.log('Service worker registered successfully');
   }).catch(function(err) {
