--- a/offline.html
+++ b/offline.html
@@ -4,11 +4,11 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="mystyles.css">
-<title>Test mobile page</title>
+<title>Test mobile page 2 - offline</title>
 </head>
 
 <body>
-<header><h1>My Offline Page</h1></header>
+<header><h1>My Offline Page 2</h1></header>
 <div id="container">
 
 <img src="dino.png" alt="Dinosaur" />
