--- a/first.html
+++ b/first.html
@@ -6,22 +6,22 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>Test Page - Progressive Web Apps</title>
-<link rel="apple-touch-icon" sizes="57x57" href="appimages\apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="appimages\apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="appimages\apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="appimages\apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="appimages\apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="appimages\apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="appimages\apple-icon-144x144.png">
-<link rel="apple-touch-icon" sizes="152x152" href="appimages\apple-icon-152x152.png">
-<link rel="apple-touch-icon" sizes="180x180" href="appimages\apple-icon-180x180.png">
-<link rel="icon" type="image/png" sizes="192x192"  href="appimages\android-icon-192x192.png">
-<link rel="icon" type="image/png" sizes="32x32" href="appimages\favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="96x96" href="appimages\favicon-96x96.png">
-<link rel="icon" type="image/png" sizes="16x16" href="appimages\favicon-16x16.png">
+<link rel="apple-touch-icon" sizes="57x57" href="appimages/apple-icon-57x57.png">
+<link rel="apple-touch-icon" sizes="60x60" href="appimages/apple-icon-60x60.png">
+<link rel="apple-touch-icon" sizes="72x72" href="appimages/apple-icon-72x72.png">
+<link rel="apple-touch-icon" sizes="76x76" href="appimages/apple-icon-76x76.png">
+<link rel="apple-touch-icon" sizes="114x114" href="appimages/apple-icon-114x114.png">
+<link rel="apple-touch-icon" sizes="120x120" href="appimages/apple-icon-120x120.png">
+<link rel="apple-touch-icon" sizes="144x144" href="appimages/apple-icon-144x144.png">
+<link rel="apple-touch-icon" sizes="152x152" href="appimages/apple-icon-152x152.png">
+<link rel="apple-touch-icon" sizes="180x180" href="appimages/apple-icon-180x180.png">
+<link rel="icon" type="image/png" sizes="192x192"  href="appimages/android-icon-192x192.png">
+<link rel="icon" type="image/png" sizes="32x32" href="appimages/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="96x96" href="appimages/favicon-96x96.png">
+<link rel="icon" type="image/png" sizes="16x16" href="appimages/favicon-16x16.png">
 <link rel="manifest" href="manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
-<meta name="msapplication-TileImage" content="appimages\ms-icon-144x144.png">
+<meta name="msapplication-TileImage" content="appimages/ms-icon-144x144.png">
 <meta name="theme-color" content="#db5945"> 
      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -45,7 +45,7 @@
            
             <h3>Paddy - where are we?</h3>
               <p>
-                <img id="mainImg" src="appimages\paddy.jpg" alt="Paddy dog" />
+                <img id="mainImg" src="appimages/paddy.jpg" alt="Paddy dog" />
                 <a href="second.html">Link to second page</a> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dignissim venenatis consequat. Praesent quis odio a neque venenatis ornare. Nam vel sem sed magna porttitor ultrices. Nunc nec turpis vitae lacus efficitur pulvinar in id nibh. Praesent sed mi vel ipsum faucibus ultrices iaculis eget dui. Praesent ultricies velit vel vestibulum convallis. Praesent accumsan luctus sem, at consectetur erat convallis pretium. Nunc pulvinar nec nibh a mollis. Donec a metus in sapien sollicitudin fermentum vitae eu eros.
               </p>
               <p>
