Update to prevent safari conflict with global variable

--- a/second.html
+++ b/second.html
@@ -71,7 +71,7 @@
               </p>
 
             <h3>Ask Jack</h3>
-            <form id="askJackForm">
+            <form id="askJack">
               <p>
                 <label for="name">Name: </label>
                 <input name="name" />
